small fix on contact page alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -160,9 +160,6 @@ header {
 .headshot {
   width: 100%;
 }
-.contact-icons {
-  text-align: center;
-}
 
 /* Forms
 -----------------------------------*/
